# pigeon-ui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  make.ps1  pyproject.toml
.github/: DISCUSSIONS.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/instructions/: pigeon-ui-qml.instructions.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  development-workflow.md  i18n.md  overlay-strategy.md
docs/adr/: README.md
docs/components/: PAvatar.md  PBadge.md  PBanner.md  PBreadcrumb.md  PButton.md  PCard.md  PCheckbox.md  PContextMenu.md  PDialog.md  PDivider.md  PDrawer.md  PGrid.md  PIcon.md  PIconButton.md  PInput.md  PList.md  PMenu.md  PNavBar.md  PPagination.md  PProgressBar.md  PRadio.md  PScrollBar.md  PSelect.md  PSlider.md  PSnackbar.md  PSpinner.md  PStack.md  PSwitch.md  PTabBar.md  PTable.md  PTag.md  PTextarea.md  PToast.md  PTooltip.md  PWindow.md
docs/migration/: README.md
docs/theme/: README.md
examples/: Gallery.qml  GalleryDialogs.qml  debug_minimal.py  debug_native.py  run_gallery.py
examples/dialog/: DialogExample.qml  run.py
examples/input/: InputExample.qml  run.py
examples/nav/: NavExample.qml  run.py
examples/starter/: main.py  main.qml
examples/theming/: ThemingExample.qml  run.py
scripts/: README.md  check_assets.py  check_qmldir.py  check_qmllint.py  check_version.py  pre_release_check.py
src/pigeon_ui/: __init__.py  frameless_helper.py
src/pigeon_ui/PigeonUI/: .qmllint.ini  PAvatar.qml  PBadge.qml  PBanner.qml  PBreadcrumb.qml  PButton.qml  PCard.qml  PCheckbox.qml  PContextMenu.qml  PDialog.qml  PDivider.qml  PDrawer.qml  PGrid.qml  PIcon.qml  PIconButton.qml  PInput.qml  PList.qml  PMenu.qml  PNavBar.qml  PPagination.qml  PRadio.qml  (+17 more)
tests/: __init__.py
tests/integration/: README.md  test_gallery.py  test_regression.py
tests/python/: test_frameless_helper.py  test_register.py
tests/qml/: README.md  test_qml_smoke.py
(+1 files in other folders)
